// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - features - CardFoodit should test CardFoodit - variant day-recipe 1`] = `
<div>
  <div
    class="hidden"
  >
    <article
      class="card relative w-100 max-w-1366 mx-auto h-100 --day-recipe bg-light-1"
      data-test-id="card-day-recipe-comun-D3SATI3N45FQTB5PYSC7TRFTTU"
      data-variant="day-recipe"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container flex-column row-gap-0 column-gap-32 h-100 text-inherit flex-row_lg"
        data-variant="primary"
        href="/salados/pollo/receta-para-comer-mas-rico-con-pollito-2-nid18092023/"
        target="_self"
        title="Receta para comer mas rico con ...POLLITO 2"
      >
        <div
          class="relative w-100 --img-full-width_max1280"
        >
          <div
            class="foodit-placeholder card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://www.lanacion.com.ar/resizer/UGjxrx8lNRZ4UUUncPnYY8j_pTA=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
              />
              <img
                alt="Receta para comer mas rico con ...POLLITO 2"
                class="image flex card-image ratio-3-2 w-100 --cover"
                decoding="async"
                fetchpriority="high"
                loading="eager"
                src="https://www.lanacion.com.ar/resizer/UAW2_6kmsNW2vZMJz0Ju7tE8PlY=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
              />
            </picture>
          </div>
          <span
            class="inline-flex ai-center gap-4 py-2 px-16 bg-accent-vino text-light-1 text-12 roboto-bold uppercase absolute bottom-0 left-0 m-8"
          >
            FÁCIL
          </span>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 jc-between gap-16 text-light-800 max-w-483_lg pt-16 pt-0_lg"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <span
                class="text text-accent-tomate prumo prumo-medium text-16 uppercase"
              >
                Receta del día
              </span>
              <h1
                class="text card-title prumo transition-regular prumo-medium prumo-book text-28 text-40_md text-48_lg"
              >
                Receta para comer mas rico con ...POLLITO 2
              </h1>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 flex-row flex-column_lg ai-center ai-start_lg"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Por Foodit
              </span>
              <div
                class="flex ai-center gap-4"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <mock-icon
                    name="timer"
                  />
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  4 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-id="D3SATI3N45FQTB5PYSC7TRFTTU"
              data-modal="open-modal"
              data-test-id="button-bookmark-D3SATI3N45FQTB5PYSC7TRFTTU"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 w-20_lg --dark"
              >
                <mock-icon
                  critical="true"
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase lg-only"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
  </div>
</div>
`;

exports[`Components - features - CardFoodit should test CardFoodit - variant note 1`] = `
<div>
  <div
    class="hidden"
  >
    <article
      class="card relative w-100 max-w-1366 mx-auto h-100 border border-all border-thin border-light-100 overflow-hidden bg-positive"
      data-test-id="card-note--FMLGIYTL2ZBCRAKQTSO27CCQ6U"
      data-variant="note"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container flex-column row-gap-0 column-gap-32 h-100 text-inherit"
        data-variant="primary"
        href="/guia-de-cocina/ficha-nota-foodit-nid18092023/"
        target="_self"
        title="Ficha nota FOODIT"
      >
        <div
          class="relative w-100 px-16 pt-16 pb-4"
        >
          <div
            class="foodit-placeholder card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/Spw-P_Ze--P3HO9SaTYjxuMlPNw=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/YXS2J3YI7ZFWJC5I3ECOTV45O4.jpg"
              />
              <img
                alt="Ficha nota FOODIT"
                class="image flex card-image ratio-3-2 w-100 --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/Y3c9dz-FJtxyQGLQUN4VDMWeaOY=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/YXS2J3YI7ZFWJC5I3ECOTV45O4.jpg"
              />
            </picture>
          </div>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 jc-between gap-16 text-light-800 px-16 pb-16 pt-20"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular text-ellipsis-3 prumo-semibold text-20"
              >
                Ficha nota FOODIT
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Por Foodit
              </span>
              <div
                class="flex ai-center gap-4"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <mock-icon
                    name="timer"
                  />
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  7 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-id="FMLGIYTL2ZBCRAKQTSO27CCQ6U"
              data-modal="open-modal"
              data-test-id="button-bookmark-FMLGIYTL2ZBCRAKQTSO27CCQ6U"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical="true"
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
  </div>
</div>
`;

exports[`Components - features - CardFoodit should test CardFoodit - variant recipe 1`] = `
<div>
  <div
    class="hidden"
  >
    <article
      class="card relative w-100 max-w-1366 mx-auto h-100 border border-all border-thin border-light-100 overflow-hidden bg-light-1"
      data-test-id="card-recipe-comun-D3SATI3N45FQTB5PYSC7TRFTTU"
      data-variant="recipe"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container flex-column row-gap-0 column-gap-32 h-100 text-inherit"
        data-variant="primary"
        href="/salados/pollo/receta-para-comer-mas-rico-con-pollito-2-nid18092023/"
        target="_self"
        title="Receta para comer mas rico con ...POLLITO 2"
      >
        <div
          class="relative w-100"
        >
          <div
            class="foodit-placeholder card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://www.lanacion.com.ar/resizer/UGjxrx8lNRZ4UUUncPnYY8j_pTA=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
              />
              <img
                alt="Receta para comer mas rico con ...POLLITO 2"
                class="image flex card-image ratio-3-2 w-100 --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://www.lanacion.com.ar/resizer/UAW2_6kmsNW2vZMJz0Ju7tE8PlY=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
              />
            </picture>
          </div>
          <span
            class="inline-flex ai-center gap-4 py-2 px-16 bg-accent-vino text-light-1 text-12 roboto-bold uppercase absolute bottom-0 left-0 translate-y-50"
          >
            FÁCIL
          </span>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 jc-between gap-16 text-light-800 px-16 pb-16 pt-20"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular text-ellipsis-3 prumo-medium text-20"
              >
                Receta para comer mas rico con ...POLLITO 2
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Por Foodit
              </span>
              <div
                class="flex ai-center gap-4"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <mock-icon
                    name="timer"
                  />
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  4 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-id="D3SATI3N45FQTB5PYSC7TRFTTU"
              data-modal="open-modal"
              data-test-id="button-bookmark-D3SATI3N45FQTB5PYSC7TRFTTU"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical="true"
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
  </div>
</div>
`;

exports[`Components - features - CardFoodit with isAdmin, should return WarningMessage without noteId 1`] = `
<div>
  <article
    data-feature-id="f0f1sPQ6tYQr7ye"
  >
    <div
      style="margin-top: 10px; margin-bottom: 10px; width: 100%;"
    >
      <div
        class="mod-warning --warning"
      >
        <h2
          class="title"
        >
          Advertencia
        </h2>
        <p
          class="text"
        >
          El campo Id de la Nota es obligatorio.
        </p>
      </div>
    </div>
  </article>
</div>
`;
